--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.antlr-4.1-complete.jar=grammar/antlr-4.1-complete.jar
+file.reference.jcommander-1.30.jar=lib/jcommander-1.30.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.antlr-4.1-complete.jar}
+    ${file.reference.antlr-4.1-complete.jar}:\
+    ${file.reference.jcommander-1.30.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,5 +73,6 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.jcommander-1.30.jar=lib/jcommander-1.30-sources.jar
 src.dir=src
 test.src.dir=test
