--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,13 @@ dist.jar=${dist.dir}/fplus.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.antlr-4.1-complete.jar=grammar/antlr-4.1-complete.jar
+file.reference.antlr-4.5-complete.jar=grammar/antlr-4.5-complete.jar
 file.reference.jcommander-1.30.jar=lib/jcommander-1.30.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
-    ${file.reference.antlr-4.1-complete.jar}:\
-    ${file.reference.jcommander-1.30.jar}
+    ${file.reference.jcommander-1.30.jar}:\
+    ${file.reference.antlr-4.5-complete.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
